quorum/test/tests/TypeChecker/Pass/AutoboxNumberSemiWrapped.quorum
action main
    AutoboxTempClass<number> obj
    number x
    obj:setSomething(7.5)
    x = obj:getSomething()
end