quorum/test/tests/TypeChecker/Fail/ImpAssignIntegerNumberWrapped.quorum
class main
    action main
        number n = 7.5
        integer i = n
    end
end